Updates: fix package.json add rest api add swagger add grpc client and protobuf
